--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
             <h2>Projects</h2>
             <ul>
                 <!-- <li><a href="#"></a></li> -->
-                <li><a href="#">Java programme in Bellmun Ford</a></li>
-                <!-- <li><a href="#"></a></li> -->
-                <!-- Add more project links here -->
+                <li><a href="https://janyahk.github.io/project/">music interaction playlist</a></li>
+                <li><a href=" https://janyahk.github.io/lotteryticket/">Lottery Ticket</a></li> -->
+                <!-- Add more project links here
             </ul>
         </div>
     </section>
